2012-08-02  Felix Ingrand  <felix@cturtle>

	* pu-parse-tl.c (PU_bind_expr): from static to extern for PU_bind functions.

2012-07-31  Felix Ingrand  <felix@cturtle>

	* pu-mk-term.c (PUMakeTermString): const char *...

2012-07-23  Felix Ingrand  <felix@cturtle>

	* pu-genom.c (pu_check_ttc_name_strict): Made a strict
	version... this could be a macro.

2012-06-08  Felix Ingrand  <felix@cturtle>

	* pu-genom.c: Added macro/function for
	genom3 encoding/decoding... I removed the "array" stuff, which I
	should not need anymore... we will see.

2011-03-01  Felix Ingrand  <felix@cturtle>

	* pu-genom.c added function to add simple type (not expecting array like with GenoM).

2011-02-27  Felix Ingrand  <felix@cturtle>

	* pu-parse-tl.c (PUGetOprsVarArgParameters): Minors changes (e.g. use
	symbol instead of strings).
	(PUGetOprsVarArgParameters): oops... DECLARE_ID is a macro and could
	not be used in this lib. declare_atom will do the same thing.
n
2011-02-26  Felix Ingrand  <felix@cturtle>

	* pu-parse-tl.c (PUGetOprsVarArgParameters): improve the test on the
	argument name

	Here is an example of a more complex usage:

Term *pr2CallPointHeadAction(TermList terms) 
{
  pr2_controllers_msgs::PointHeadGoal goal;

  //This call will parse the arguments, self explanatory... no?
  if (PUGetOprsVarArgParameters(terms, 8,
				set_parameter_or_default_value(goal.pointing_frame, "high_def_frame", STRING),
				set_parameter_or_default_value(goal.target.header.frame_id, "base_link", STRING),
				set_parameter_or_default_value(goal.target.point.x, 5, FLOAT),
				set_parameter_or_default_value(goal.target.point.y, 0, FLOAT),
				set_parameter_or_default_value(goal.target.point.z, 1.2, FLOAT),
				set_parameter_or_default_value(goal.pointing_axis.x, 1.0, FLOAT),
				set_parameter_or_default_value(goal.pointing_axis.y, 0.0, FLOAT),
				set_parameter_or_default_value(goal.pointing_axis.z, 0.0, FLOAT)
				)) {
....
This particular action can now be called with the following goal: