@@ -1,3 +1,7 @@
+2012-10-09  Felix Ingrand  <felix@lucid>
+
+	* pu-genom.c (pu_check_ttc_name): This was pretty stupid to change the protoype of a function used by GenoM2. Renamed the new version instead.
+
 2012-08-02  Felix Ingrand  <felix@cturtle>
 
 	* pu-parse-tl.c (PU_bind_expr): from static to extern for PU_bind functions.
